@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Fix top menu URLs to create new tasks in specific task lists.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1504,7 +1504,7 @@
    <date>2014-05-06</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Fix top menu URLs to create new tasks in specific task lists.
    </notes>
   </release>
  </changelog>
