@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Fix top menu URLs to create new tasks in specific task lists.
 
 
 ------------
